--- a/HeapSortAndroid/app/src/main/res/values/strings.xml
+++ b/HeapSortAndroid/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">HeapSortAndroid</string>
     <string name="subscription_key">59f9c8a420e146a98bf31cc35e9190f1</string>
-
-
+    <string name="client_id">hurE33brY0CaPgS6T335r6ez5agMRLPX0ypgngJn</string>
+    <string name="client_secret">4x7YhrJdOsOJqSEb4nldwdMqt7MNmN5B0pOWQE4t</string>
     <string name="dummy_button">Dummy Button</string>
     <string name="dummy_content">DUMMY\nCONTENT</string>
     <string name="title_activity_main">MainActivity</string>
